<resources>
    <string name="app_name">GeoRo</string>
    <string name="culinary_profile">Profil Culinar</string>
    <string name="please_enter_name">Te rugăm să introduci numele tău</string>
    <string name="profile_saved">Profil salvat cu succes</string>
    <string name="welcome_title_1">Bine ai venit în Călătoria Culinară</string>
    <string name="welcome_text_1">Descoperă rețete delicioase din toate regiunile României și începe-ți aventura culinară.</string>
    <string name="welcome_title_2">Planifică-ți Mesele</string>
    <string name="welcome_text_2">Creează meniuri săptămânale și generează liste de cumpărături pentru ingredientele necesare.</string>
    <string name="welcome_title_3">Devino un Chef Expert</string>
    <string name="welcome_text_3">Învață tehnici noi, descoperă ingrediente speciale și explorează gusturile tradiționale românești.</string>
    <string name="my_recipes">Rețetele mele</string>
    <string name="favorites">Favorite</string>
    <string name="recently_viewed">Vizionate recent</string>
    <string name="no_favorite_recipes">Nu ai nicio rețetă favorită</string>
    <string name="no_created_recipes">Nu ai creat nicio rețetă</string>
    <string name="no_recent_recipes">Nu ai vizionat nicio rețetă recent</string>
    <string name="shopping_list_title">Listă de cumpărături</string>
    <string name="rom_achievements_title">Realizări</string>
    <string name="rom_achievements_empty">Nu ai deblocat încă nicio realizare</string>
    <string name="rom_achievements_progress">Realizări deblocate: %1$d din %2$d</string>
    <string name="rom_achievement_unlocked">Realizare deblocată!</string>
    <string name="achievement_unlocked">Realizare deblocată: %1$s</string>
    <string name="rom_achievements_stats_title">Statistici de joc</string>
    <string name="rom_achievements_unlocked_label">Realizări deblocate</string>
    <string name="rom_achievements_list_description">Realizările Tale</string>
    <string name="rom_culture_points_label">Puncte culturale: %1$d</string>
    <string name="rom_back">Înapoi</string>
    <string name="rom_points_required">Puncte necesare: %1$d</string>
    <string name="rom_fuel_label">%1$d L</string>
    <string name="rom_money_label">%1$d RON</string>
    <string name="rom_food_label">%1$d kg</string>
    <string name="quest_title">Misiuni și Provocări</string>
    <string name="quest_submit_answer">Răspunde la provocare</string>
    <string name="quest_cancel">Anulează</string>
    <string name="quest_challenge_title">Provocare</string>
    <string name="quest_answer_hint">Ești sigur că vrei să marchezi această misiune ca finalizată?</string>
    <string name="quest_points_earned">Ai câștigat 25 de Puncte Înțelepte!</string>
    <string name="quest_objectives_title">Obiective:</string>
    <string name="quest1_title">Misterele Sibiului Medieval</string>
    <string name="quest1_description">Descoperă secretele Podului Minciunilor și ale Pieței Mari</string>
    <string name="quest1_objective1">Găsește și fotografiază cele mai vechi 3 case din Piața Mare</string>
    <string name="quest1_objective2">Descoperă legenda Podului Minciunilor</string>
    <string name="quest1_objective3">Identifică simbolurile breslelor medievale</string>
    <string name="quest2_title">Comoara Bisericii Negre</string>
    <string name="quest2_description">Explorează cel mai mare edificiu gotic din Europa de Est</string>
    <string name="quest2_objective1">Descoperă simbolistica vitraliilor</string>
    <string name="quest2_objective2">Găsește covorul oriental cel mai vechi</string>
    <string name="quest3_title">Legendele Clujului</string>
    <string name="quest3_description">Descoperă poveștile ascunse ale orașului</string>
    <string name="quest3_objective1">Vizitează casa lui Matei Corvin</string>
    <string name="quest3_objective2">Găsește statuia Sf. Gheorghe</string>
    <string name="quest3_objective3">Explorează criptele Bisericii Sf. Mihail</string>
    <string name="quest3_objective4">Află despre Turnul Croitorilor</string>
    <string name="quest4_title">Orașele Olteniei</string>
    <string name="quest4_description">Explorează frumusețea urbană a Olteniei</string>
    <string name="quest4_objective1">Vizitează Centrul Vechi din Craiova</string>
    <string name="quest4_objective2">Descoperă istoria Râmnicu Vâlcea</string>
    <string name="quest5_title">Bucureștiul Interbelic</string>
    <string name="quest5_description">Călătorește în timp prin arhitectura capitalei</string>
    <string name="quest5_objective1">Identifică stilurile arhitecturale de pe Calea Victoriei</string>
    <string name="quest5_objective2">Descoperă poveștile Ateneului Român</string>
    <string name="quest5_objective3">Explorează Micul Paris al României</string>
    <string name="minigame_label">MINI-JOC ROMÂNIA</string>
    <string name="minigame_description">Explorează România într-un mini-joc interactiv</string>
    <string name="quiz_label">ÎNCEPE QUIZ-UL</string>
    <string name="map_label">EXPLOREAZĂ HARTA</string>
    <string name="quest_label">QUEST PATRIMONIU</string>
    <string name="culinary_label">CĂLĂTORIE CULINARĂ</string>
    <string name="minigame_level">Nivel: %1$d</string>
    <string name="minigame_mission">Misiune: %1$s</string>
    <string name="minigame_new_mission">Misiune nouă: %1$s</string>
    <string name="minigame_level_up">Felicitări! Ai avansat la nivelul %1$d</string>
    <string name="minigame_collect_mission">Colectează %1$d obiecte tradiționale</string>
    <string name="minigame_reach_location">Ajunge la locația marcată pe hartă</string>
    <string name="minigame_npc_nearby">Apasă butonul pentru a interacționa cu %1$s</string>
    <string name="minigame_npc_title">Întâlnire cu %1$s</string>
    <string name="minigame_npc_quest_accept">Acceptă Quest</string>
    <string name="minigame_npc_quest_decline">Închide</string>
    <string name="minigame_npc_quest_info">Quest: %1$s</string>
    <string-array name="npc_cluj_dialogues">
        <item>Bine ai venit în Cluj, inima Transilvaniei!</item>
        <item>Ai gustat vreodată varza à la Cluj? E o delicatesă locală!</item>
        <item>Știai că Universitatea Babeș-Bolyai este cea mai veche din România?</item>
        <item>Piața Unirii este locul perfect pentru a începe explorarea orașului.</item>
    </string-array>
    <string-array name="npc_iasi_dialogues">
        <item>Bine ai venit în Iași, capitala culturală a Moldovei!</item>
        <item>Palatul Culturii este simbolul orașului nostru.</item>
        <item>Grădina Copou ascunde multe povești fascinante.</item>
        <item>Ai văzut Teiul lui Eminescu? E un loc special pentru noi.</item>
    </string-array>
    <string-array name="npc_timisoara_dialogues">
        <item>Bun venit în Timișoara, primul oraș cu iluminat stradal electric din Europa!</item>
        <item>Piața Victoriei, sau Piața Operei cum îi spunem noi, e inima orașului.</item>
        <item>Timișoara e orașul florilor și al parcurilor.</item>
        <item>Revoluția din 1989 a început aici, în Piața Maria.</item>
    </string-array>
    <string name="quest_cluj_description">Descoperă secretele gastronomice ale Clujului - Găsește 5 rețete tradiționale ascunse în oraș.</string>
    <string name="quest_iasi_description">Călătorie culturală în Iași - Vizitează 3 locații istorice importante și colectează artefacte.</string>
    <string name="quest_timisoara_description">Explorează Timișoara luminilor - Găsește și fotografiază 4 clădiri istorice iluminate.</string>
    <string name="minigame_instructions">Explorează harta României și colectează obiectele tradiționale!</string>
    <string name="minigame_interact">Interacționează</string>
    <string name="minigame_achievement_collector">Colecționar de Tradiții</string>
    <string name="minigame_achievement_explorer">Explorator al României</string>
    <string name="minigame_achievement_friend">Prieten al Localnicilor</string>
    <string name="minigame_openworld_title">Vânătoarea de Comori</string>
    <string name="minigame_score">Scor: %d</string>
    <string name="minigame_up">Sus</string>
    <string name="minigame_down">Jos</string>
    <string name="minigame_left">Stânga</string>
    <string name="minigame_right">Dreapta</string>
    <string name="minigame_points_earned">Ai câștigat %d puncte înțelepte!</string>
    <string name="minigame_collect_item">Ai găsit un obiect tradițional!</string>
    <string name="minigame_game_over">Joc terminat! Scor final: %d</string>
    <string name="minigame_controls_hint">Folosește butoanele pentru a te deplasa</string>
    <string name="minigame_title">Provocarea României</string>
    <string name="minigame_correct">Corect! +10 puncte</string>
    <string name="minigame_wrong">Încearcă din nou!</string>
    <string name="minigame_image_desc">Imagine pentru întrebare</string>
    <string-array name="minigame_questions">
        <item>Care este capitala României?</item>
        <item>Care este cel mai înalt vârf muntos din România?</item>
        <item>Care este cel mai mare oraș din Moldova?</item>
        <item>Care este cel mai lung fluviu ce traversează România?</item>
        <item>În ce regiune se află Castelul Bran?</item>
    </string-array>
    <string-array name="minigame_correct_answers">
        <item>București</item>
        <item>Moldoveanu</item>
        <item>Iași</item>
        <item>Dunărea</item>
        <item>Transilvania</item>
    </string-array>
    <string-array name="minigame_options_1">
        <item>Cluj-Napoca</item>
        <item>București</item>
        <item>Timișoara</item>
        <item>Brașov</item>
    </string-array>
    <string-array name="minigame_options_2">
        <item>Negoiu</item>
        <item>Moldoveanu</item>
        <item>Omu</item>
        <item>Ceahlău</item>
    </string-array>
    <string-array name="minigame_options_3">
        <item>Suceava</item>
        <item>Bacău</item>
        <item>Iași</item>
        <item>Piatra Neamț</item>
    </string-array>
    <string-array name="minigame_options_4">
        <item>Siret</item>
        <item>Prut</item>
        <item>Mureș</item>
        <item>Dunărea</item>
    </string-array>
    <string name="cancel">Anulează</string>
    <string name="back_to_map">Înapoi la hartă</string>
    <string name="treasure_hunt_title">Vânătoare de Comori pe Plajă</string>
    <string name="treasure_hunt_instructions">Găsește obiectele ascunse în scenă!</string>
    <string name="add">Adaugă</string>
    <string name="add_meal">Adaugă masă</string>
    <string name="select_day">Selectează ziua</string>
    <string name="meal_type">Tip masă</string>
    <string name="breakfast">Mic dejun</string>
    <string name="lunch">Prânz</string>
    <string name="dinner">Cină</string>
    <string name="selected_recipe">Rețeta selectată</string>
    <string name="drag_handle">Mâner de tragere</string>
    <string name="search_recipes">Caută rețete</string>
    <string name="search_recipes_hint">Caută după nume, regiune sau categorie</string>
    <string name="no_recipes_found">Nicio rețetă găsită</string>
    <string name="search_icon_content_description">Pictogramă de căutare</string>
    <string name="day_icon_content_description">Pictogramă pentru selectarea zilei</string>
    <string name="recipe_icon_content_description">Pictogramă pentru rețeta selectată</string>
    <string name="search_recipe_content_description">Caută o rețetă</string>
    <string name="click_to_search_recipe">Apasă pentru a căuta o rețetă</string>
    <string name="breakfast_radio_description">Selectează mic dejun</string>
    <string name="lunch_radio_description">Selectează prânz</string>
    <string name="dinner_radio_description">Selectează cină</string>
    <string name="cancel_button_description">Anulează adăugarea mesei</string>
    <string name="add_button_description">Adaugă masa în plan</string>
</resources>