<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beach_background">

    <TextView
        android:id="@+id/treasure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treasure_hunt_title"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/beach_scene"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/treasure_title"
        android:layout_marginTop="20dp"
        android:src="@drawable/beach_scene"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treasure_hunt_instructions"
        android:layout_below="@id/beach_scene"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/back_to_map"/>

</RelativeLayout>
